# Nuwa

./: .dockerignore  Local.Nginx.Dockerfile  Nginx.Dockerfile  docker-compose.yml  local.docker-compose.yml
nuwa/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
nuwa/chat/: admin.py  models.py  providers.py  tasks.py  tests.py  urls.py  utils.py  views.py
nuwa/chat/migrations/: 0001_initial.py  0002_character_created_at_character_edited_at.py  0003_character_is_hidden_prompt.py  0004_character_is_active.py  0005_chat_message_chat_last_message_and_more.py  0006_message_history.py  0007_message_chat_messag_owner_i_44aa59_idx.py  0008_remove_message_chat_messag_owner_i_44aa59_idx_and_more.py  0009_alter_chat_last_message_text.py  0010_rename_media_path_message_media.py  0011_message_is_active.py  0012_message_info.py  0013_scheduchedtask_scheduchedmessage_and_more.py  0014_scheduledmessage_scheduledtask_and_more.py  0015_scheduledmessage_prompt_scheduledmessage_use_time.py
nuwa/chat/serializers/: character.py  chat.py  message.py
nuwa/chat/tests/: character.py  test_character.py  test_chat.py  test_chat_bot.py  (+2 more)
nuwa/local_docker/: docker-compose.yml
nuwa/nuwa/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nuwa/user/: tests.py  urls.py  views.py
nuwa/workflows/: test_character.json
nuwa_fastapi/: .gitignore  alembic.ini  main.py  pyproject.toml
nuwa_fastapi/local_docker_nuwa_fastapi/: docker-compose.yml
nuwa_fastapi/src/: auth.py  config.py  database.py  db_connection.py  providers.py  router.py  utils.py
(+66 files in other folders)
