[project]
name = "nuwa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "channels[daphne]>=4.3.2",
    "django>=6.0.1",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "psycopg>=3.3.2",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "uwsgi",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
]
